# data_scraper

./: .env.example  .gitignore  README.md  build_venv.py  demo_placeholder.json  estructura_recomendada.txt  model_processor.py  pyproject.toml  requirements.txt
src/: Ian_test.ipynb  Mauro_test.ipynb  data.txt  estructura_recomendada.txt  mongo_connect_test.ipynb
src/DB/: DB_DOCS.ipynb  DB_USE.ipynb  Role_Kind_Companies_Model.txt  companies_model.jsonc  companies_querys.py  estructura_recomendada.txt  info_querys.ipynb  mongo.py  platforms_querys.py  torpedo_mongo.py
src/ai/: AI_DEMO.ipynb  service.py
src/analizers/: ANALIZERS_DOCS.ipynb  data_filter.py  datasource_role_classifier.py  domain_lists.py  estructura_recomendada.txt  model_processor.py  role_classifier.py  social_profile_selector.py  store_links_selector.py
src/scraper_pages.py/: Mauro_test.ipynb  Proyecto.ipynb  README.md  README.txt  model_builder.py  model_processor.py  page_analyzer.py  page_deep_scraper.py  test.py
src/scrapers/: SCRAPERS_DOCS.ipynb  estructura_recomendada.txt  favicon_scraper.py  model_builder.py  page_deep_scraper.py  thecrowdspace_profile_scraper.py
src/utils/: logger.py
src/workflows/: classify_active_companies_datasources.py  classify_role_datasources_active_companies.py  companies_list.csv  companies_listNO.csv  companies_list_out.csv  companies_list_outNO.csv  download_favicons_workflow.py  estructura_recomendada.txt  favicon_extractor_workflow.py  list_to_scrap_to_model_to_DB.ipynb  list_to_scrap_to_model_to_DB.py  normalize_primary_domains.py  (+5 more)
(+11 files in other folders)
